--- a/style.css
+++ b/style.css
@@ -47,3 +47,42 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+body {
+    background-color: LightGray;
+}
+
+
+/* Navigation Section */
+.top-navigation {
+    background-color: #fff;
+}
+.top-navigation > .content {
+	width: 60em;
+	height: 4.3em;
+	padding: 0px 15px;
+}
+
+div.content .links {
+	float: right;
+	display: inline-block;
+	text-align: center;
+}
+
+div.content li {
+	text-decoration: none;
+	color: #a30c50;
+	padding: 0em 10;
+	font-family: 'Roboto', sans-serif; 
+	font-size: 12px; 
+	color: #838994; 
+	letter-spacing: 0.03em;
+	-webkit-font-smoothing: antialiased;
+}
+div.content > links.active {
+ 	color: #4c5058;
+    font-weight: 600;
+}
+
+li:hover{
+    background:gray;
+}
