--- a/style.css
+++ b/style.css
@@ -57,32 +57,57 @@ body {
     background-color: #fff;
 }
 .top-navigation > .content {
-	width: 60em;
-	height: 4.3em;
+	width: 970px;
+    height: 70px;
 	padding: 0px 15px;
+	margin: 0 auto;   
 }
-
-div.content .links {
+.top-navigation .logo {
+	height: 70px;
+}
+.top-navigation .links {
 	float: right;
-	display: inline-block;
-	text-align: center;
-}
-
-div.content li {
-	text-decoration: none;
 	color: #a30c50;
-	padding: 0em 10;
+	padding: 0em 0;
 	font-family: 'Roboto', sans-serif; 
 	font-size: 12px; 
 	color: #838994; 
 	letter-spacing: 0.03em;
 	-webkit-font-smoothing: antialiased;
+
 }
-div.content > links.active {
+.top-navigation .links li {
+	display: inline-block;
+	text-align: center;
+	padding: 2em 6;
+}
+.top-navigation .links .active {
  	color: #4c5058;
     font-weight: 600;
 }
+.top-navigation .links li:hover{
+    color:blue;
+}
+/* Introduction Section */
+div.introduction {
+	background-image: <img src="img/coffee-shop-banner.jpg">
+	background-size: cover;
 
-li:hover{
-    background:gray;
+}
+.intro-background { 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+.intro-content{
+	text-align: center;
+	margin-bottom: 50em;
+
+}
+.intro-content .introducing-karma {
+	font-size: 4em;
+	font-family:'Roboto', sans-serif; 
+	color: #fff;
+
 }
