--- a/style.css
+++ b/style.css
@@ -88,26 +88,49 @@ body {
 .top-navigation .links li:hover{
     color:blue;
 }
+
 /* Introduction Section */
-div.introduction {
-	background-image: <img src="img/coffee-shop-banner.jpg">
+
+section.introduction {
+	background-image: url(img/coffee-shop-banner.jpg);
 	background-size: cover;
-
+	padding: 15em 0;
 }
-.intro-background { 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-.intro-content{
-	text-align: center;
-	margin-bottom: 50em;
-
+div.intro-content .introducing-karma,
+div.intro-content .bring-wifi {
+	margin-top: -90px;
+	margin-left: 90px;
 }
 .intro-content .introducing-karma {
-	font-size: 4em;
+	font-size: 3em;
 	font-family:'Roboto', sans-serif; 
 	color: #fff;
+	letter-spacing: 0.03em;
+	-webkit-font-smoothing: antialiased;
+}
+p.bring-wifi {
+	font-size: 1.37em;
+	font-family:'Roboto', sans-serif; 
+	color: #fff;
+	letter-spacing: 0.03em;
+	-webkit-font-smoothing: antialiased;
+	padding-top: 90px;
+}
+div.buttons {
+	text-align: center;
+}
+h3.learn-more {
+	font-size: 2em;
+	font-family:'Roboto', sans-serif; 
+	color: #000;
+	letter-spacing: 0.03em;
+	-webkit-font-smoothing: antialiased;
+	background-color: #fff;
+	position: absolute;
+	text-shadow: none;
+	border-style: none;
+	border-radius: 4px;
+	padding: 16px 26px;
+	line-height: 1.33;
 
 }
