--- a/style.css
+++ b/style.css
@@ -285,6 +285,7 @@ footer p.karma-notes {
 
 footer h2 {
 	font-size: 1.05em;
+	padding-bottom: 20px;
 }
 footer div.footer-social {
 	margin-left: 590px;
@@ -292,5 +293,6 @@ footer div.footer-social {
 footer p.karma-notes {
 	color: #888888;
 	font-size: .9em;
+	padding-top: 10px;
 	padding-bottom: 100px;
 }
