--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ div.learn-more {
 button {
 	text-shadow: none;
     border-style: none;
-    border-radius: 4px;
+    border-radius: 8px;
     padding: 16px 26px;
     line-height: 1.33;
 	font-size: 1em;
@@ -290,9 +290,14 @@ footer h2 {
 footer div.footer-social {
 	margin-left: 590px;
 }
+footer div.social-icons {
+	text-align: center;
+}
+
+
 footer p.karma-notes {
 	color: #888888;
 	font-size: .9em;
 	padding-top: 10px;
 	padding-bottom: 100px;
-}
+
